<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageViewDesign"
        android:layout_width="410dp"
        android:layout_height="210dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="@drawable/loginstyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/content_discription"/>

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewDesign"
        app:layout_constraintEnd_toEndOf="@+id/imageViewDesign" />

    <ImageView
        android:id="@+id/goback"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/roundbtn"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewDesign"
        app:layout_constraintEnd_toEndOf="@+id/imageViewDesign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewDesign"
        app:srcCompat="@drawable/ic_arrow_back"
        android:contentDescription="@string/content_discription"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/simpleroundbtn"
        android:drawableLeft="@drawable/ic_email"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="20sp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:autofillHints="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingLeft="20sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDesign" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/simpleroundbtn"
        android:drawableLeft="@drawable/ic_password"
        android:drawableStart="@drawable/ic_password"
        android:drawableRight="@drawable/ic_visibility_off_black_24dp"
        android:drawableEnd="@drawable/ic_visibility_off_black_24dp"
        android:drawablePadding="20sp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:autofillHints="@string/password_hint"
        android:inputType="textPassword"
        android:paddingLeft="20sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <TextView
        android:id="@+id/textViewForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/roundbtn"
        android:text="@string/btn_login"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewForgetPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/no_account"
        app:layout_constraintEnd_toStartOf="@+id/textViewRegister"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="clickOnRegister"
        android:text="@string/register"
        android:textColor="@color/signText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <Button
        android:id="@+id/button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:minWidth="45dp"
        android:minHeight="45dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>