<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">


    <ImageView
        android:id="@+id/imageViewRegisterDesign"
        android:layout_width="410dp"
        android:layout_height="210dp"
        android:background="@drawable/loginstyle"
        android:contentDescription="@string/content_discription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRegisterLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewRegisterDesign"
        app:layout_constraintEnd_toEndOf="@+id/imageViewRegisterDesign" />

    <ImageView
        android:id="@+id/Registergoback"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/roundbtn"
        android:contentDescription="@string/content_discription"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewRegisterDesign"
        app:layout_constraintEnd_toEndOf="@+id/imageViewRegisterDesign"
        app:layout_constraintStart_toStartOf="@+id/imageViewRegisterDesign"
        app:layout_constraintTop_toTopOf="@+id/imageViewRegisterDesign"
        app:srcCompat="@drawable/ic_arrow_back" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="488dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewRegisterDesign"
        app:layout_constraintVertical_bias="0.0"
        android:fillViewport="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="200sp">

            <EditText
                android:id="@+id/fullname"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/simpleroundbtn"
                android:drawableLeft="@drawable/ic_user"
                android:drawableStart="@drawable/ic_user"
                android:hint="@string/name_hint"
                android:autofillHints="@string/name_hint"
                android:layout_alignParentEnd="true"
                android:inputType="textPersonName"
                android:drawablePadding="20dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_below="@+id/fullname"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/simpleroundbtn"
                android:drawableLeft="@drawable/ic_email"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/email_hint"
                android:autofillHints="@string/email_hint"
                android:layout_alignParentEnd="true"
                android:inputType="textEmailAddress"
                android:drawablePadding="20dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"/>

            <EditText
                android:id="@+id/address"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_below="@+id/email"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/simpleroundbtn"
                android:drawableLeft="@drawable/ic_address"
                android:drawableStart="@drawable/ic_address"
                android:hint="@string/address_hint"
                android:autofillHints="@string/address_hint"
                android:layout_alignParentEnd="true"
                android:inputType="numberDecimal"
                android:drawablePadding="20dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"/>

            <EditText
                android:id="@+id/id"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_below="@+id/address"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/simpleroundbtn"
                android:drawableLeft="@drawable/ic_id"
                android:drawableStart="@drawable/ic_id"
                android:hint="@string/id_hint"
                android:autofillHints="@string/id_hint"
                android:layout_alignParentEnd="true"
                android:inputType="numberDecimal"
                android:drawablePadding="20dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"/>

            <EditText
                android:id="@+id/phonenumber"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_below="@+id/id"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/simpleroundbtn"
                android:drawableLeft="@drawable/ic_contact_phone"
                android:drawableStart="@drawable/ic_contact_phone"
                android:hint="@string/phone_number_hint"
                android:autofillHints="@string/phone_number_hint"
                android:layout_alignParentEnd="true"
                android:inputType="numberDecimal"
                android:drawablePadding="20dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_below="@+id/phonenumber"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/simpleroundbtn"
                android:drawableLeft="@drawable/ic_password"
                android:drawableStart="@drawable/ic_password"
                android:drawableRight="@drawable/ic_visibility_off_black_24dp"
                android:drawableEnd="@drawable/ic_visibility_off_black_24dp"
                android:hint="@string/password_hint"
                android:autofillHints="@string/password_hint"
                android:layout_alignParentEnd="true"
                android:inputType="textPassword"
                android:drawablePadding="20dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"/>

            <EditText
                android:id="@+id/confirmpassword"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_below="@+id/password"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/simpleroundbtn"
                android:drawableLeft="@drawable/ic_password"
                android:drawableStart="@drawable/ic_password"
                android:drawableRight="@drawable/ic_visibility_off_black_24dp"
                android:drawableEnd="@drawable/ic_visibility_off_black_24dp"
                android:hint="@string/confirm_password_hint"
                android:autofillHints="@string/confirm_password_hint"
                android:layout_alignParentEnd="true"
                android:inputType="textPassword"
                android:drawablePadding="20dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"/>

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_below="@+id/confirmpassword"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/roundbtn"
                android:gravity="center"
                android:text="@string/btn_register"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/buttonOnConfirmPassword"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:minWidth="45dp"
                android:minHeight="45dp"
                android:layout_alignTop="@+id/confirmpassword"
                android:layout_alignBottom="@+id/confirmpassword"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="0dp" />

            <Button
                android:id="@+id/buttonOnPassword"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:minWidth="45dp"
                android:minHeight="45dp"
                android:layout_alignTop="@+id/password"
                android:layout_alignBottom="@+id/password"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="0dp" />

        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>