<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageViewTopBack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@color/colorPrimary" />

    <ImageView
        android:id="@+id/imageViewBottomBack"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/roundview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:autofillHints="@string/search_hint"
        android:background="@drawable/searchround"
        android:drawableEnd="@drawable/ic_search_white_24dp"
        android:drawableRight="@drawable/ic_search_white_24dp"
        android:drawablePadding="20sp"
        android:ems="10"
        android:hint="@string/search_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingLeft="20sp"
        android:paddingEnd="20dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewTopBack" />

    <TextView
        android:id="@+id/textViewFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/find"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageViewTopBack"
        app:layout_constraintTop_toTopOf="@+id/imageViewTopBack" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_place_to_stay"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/textViewFind"
        app:layout_constraintTop_toBottomOf="@+id/textViewFind" />

    <TextView
        android:id="@+id/textViewShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@+id/imageViewBottomBack"
        app:layout_constraintTop_toTopOf="@+id/imageViewBottomBack" />

</androidx.constraintlayout.widget.ConstraintLayout>